GNOME Bugzilla – Bug 668284
a11y-keyboard: don't restore settings at logout
Last modified: 2012-01-19 16:46:59 UTC
See patch.
Created attachment 205640 [details] [review] a11y-keyboard: don't restore settings at logout The a11y-keyboard plugin goes to some efforts to record the original state of the X server and restore it on exit. It's pretty pointless to restore the settings of an X server that is just about to die, so stop doing that.
Review of attachment 205640 [details] [review]: As discussed. Thanks!
Attachment 205640 [details] pushed as 0912d32 - a11y-keyboard: don't restore settings at logout