a11y-keyboard: don't restore settings at logout

The a11y-keyboard plugin goes to some efforts to record the original
state of the X server and restore it on exit.  It's pretty pointless to
restore the settings of an X server that is just about to die, so stop
doing that.

https://bugzilla.gnome.org/show_bug.cgi?id=668284