plugins/a11y-keyboard/gsd-a11y-keyboard-manager.c
@@ -62,7 +62,6 @@ struct GsdA11yKeyboardManagerPrivate
         GtkWidget        *slowkeys_alert;
         GtkWidget        *preferences_dialog;
         GtkStatusIcon    *status_icon;
-        XkbDescRec       *original_xkb_desc;
 
         GSettings        *settings;
 
@@ -948,10 +947,6 @@ start_a11y_keyboard_idle_cb (GsdA11yKeyboardManager *manager)
 
         set_devicepresence_handler (manager);
 
-        /* Save current xkb state so we can restore it on exit
-         */
-        manager->priv->original_xkb_desc = get_xkb_desc_rec (manager);
-
         event_mask = XkbControlsNotifyMask;
         event_mask |= XkbAccessXNotifyMask; /* make default when AXN_AXKWarning works */
 
@@ -990,34 +985,6 @@ gsd_a11y_keyboard_manager_start (GsdA11yKeyboardManager *manager,
         return TRUE;
 }
 
-static void
-restore_server_xkb_config (GsdA11yKeyboardManager *manager)
-{
-        if (manager->priv->original_xkb_desc == NULL) {
-                return;
-        }
-        gdk_error_trap_push ();
-        XkbSetControls (GDK_DISPLAY_XDISPLAY (gdk_display_get_default ()),
-                        XkbSlowKeysMask         |
-                        XkbBounceKeysMask       |
-                        XkbStickyKeysMask       |
-                        XkbMouseKeysMask        |
-                        XkbMouseKeysAccelMask   |
-                        XkbAccessXKeysMask      |
-                        XkbAccessXTimeoutMask   |
-                        XkbAccessXFeedbackMask  |
-                        XkbControlsEnabledMask,
-                        manager->priv->original_xkb_desc);
-
-        XkbFreeKeyboard (manager->priv->original_xkb_desc,
-                         XkbAllComponentsMask, True);
-
-        XSync (GDK_DISPLAY_XDISPLAY (gdk_display_get_default ()), FALSE);
-        gdk_error_trap_pop_ignored ();
-
-        manager->priv->original_xkb_desc = NULL;
-}
-
 void
 gsd_a11y_keyboard_manager_stop (GsdA11yKeyboardManager *manager)
 {
@@ -1049,10 +1016,6 @@ gsd_a11y_keyboard_manager_stop (GsdA11yKeyboardManager *manager)
         gdk_window_remove_filter (NULL,
                                   (GdkFilterFunc) cb_xkb_event_filter,
                                   manager);
-
-        /* Disable all the AccessX bits
-         */
-        restore_server_xkb_config (manager);
 
         if (p->slowkeys_alert != NULL) {
                 gtk_widget_destroy (p->slowkeys_alert);
